ops/k8s/app/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: algofox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-pvc
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-data
          mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: algofox
spec:
  ports:
  - port: 6379
  selector:
    app: redis
