ops/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: algofox-ingress
  namespace: algofox
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
  - host: intelligentsiaclub.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: algofox-app
            port:
              number: 80
